--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -9,9 +9,9 @@ map $request_uri $new_uri {
 
 ## Rewrite https://gwern.net → https://www.gwern.net
 server{
-	#redirect non-www to www
-	listen 80;
-	listen 443 ssl;
+    #redirect non-www to www
+    listen 80;
+    listen 443 ssl;
         server_name gwern.net;
 
         ssl_certificate /home/gwern/ssl/cloudflare.cert;
@@ -340,7 +340,7 @@ server {
         rewrite ^/(?<original>docs/.*/[12].*\.pd)$ /$original\f permanent;
         rewrite ^/tag/.*/(?<original>.*)$ /tags/$original permanent;
         rewrite ^/(?<original1>.*)­(?<original2>.*)$ /$original1-$original2 permanent;
-        # rewrite ^/(?<original1>.*)--(?<original2>.*)$ /$original1-$original2 permanent; # wandb.ai likes double-dashes?
+        rewrite ^/(?<original1>docs/.*)--(?<original2>.*pdf)$ /$original1-$original2 permanent; # wandb.ai likes double-dashes?
         rewrite ^/(?<original1>.*)—(?<original2>.*)$ /$original1-$original2 permanent;
         rewrite ^/docs/rotten.com/library/bio/crime/killer-moms/darlie-routier/(?<original>.*) /docs/rotten.com/library/bio/crime/criminals/darlie-routier/$original permanent;
         rewrite ^/docs/rotten.com/library/bio/authors/Richard_Scarry/(?<original>.*) /docs/rotten.com/library/bio/authors/richard-scarry/$original permanent;
@@ -439,7 +439,7 @@ server {
         rewrite ^/(?<original>.*)Cache /$original permanent;
         rewrite ^/dics/(?<original>.*) /docs/$original permanent;
         rewrite ^/docs/catnip/(?<original>.*) /docs/cat/$original permanent;
-        rewrite ^/docs/sr/pickard/(?<original>.*) /docs/silk-road/william-pickard/$original permanent;
+        rewrite ^/docs/sr/pickard/(?<original>.*) /docs/darknet-markets/william-pickard/$original permanent;
         rewrite ^/docs/lwsurvey/hpmor/(?<original>.*) /docs/lesswrong-survey/hpmor/$original permanent;
         rewrite ^/docs/rl/armstrong-controlproblem/ /docs/reinforcement-learning/armstrong-controlproblem/$original permanent;
         rewrite ^/(?<original>docs/.*)/index/index.html /$original/index permanent;
@@ -630,7 +630,8 @@ server {
         rewrite ^/(?<original>.*).pages$ /$original.page permanent;
         rewrite ^/(?<original>.*).Page$ /$original.page permanent;
         rewrite ^/(?<original>.*)adminer\..*$ /$original permanent;
-        rewrite ^/(?<original>docs/.*\.pd)\/f.*$ /$original permanent;
+        rewrite ^/(?<original>docs/.*\.pd)\/(?<ext>f).*$ /$original$ext permanent;
+        rewrite ^/(?<original>docs/.*\.pd)%5c(?<ext>f).*$ /$original$ext permanent;
         rewrite ^/(?<original>docs/.*\.)-pdf$ /$original.pdf permanent;
         rewrite ^/(?<original>docs/.*\.pdf)y$ /$original permanent;
         rewrite ^/(?<original>docs/.*\.pdf)y$ /$original permanent;
@@ -653,6 +654,9 @@ server {
         rewrite ^/docs/psycology/(?<original>.*)$ /docs/psychology/$original permanent;
         rewrite ^/docs/www/pkhungurn\.github\.io/data/videos/(?<original>.*)$ https://pkhungurn.github.io/data/videos/$original permanent;
         rewrite ^(?<original>.*)\?.*callback=.*from=.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
+        rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
+        rewrite ^/docs/silk-road/(?<old>.*)$ /docs/darknet-markets/$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
