--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22977,6 +22977,30 @@
 "~^/docs/darknet-markets/3D.*$" "/docs/darknet-markets/index";
 "~^/docs/darknet-markets/=3D.*$" "/docs/darknet-markets/index";
 "~^/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/docs/darknet-markets/2013-van-hout.pdf.*$" "/docs/darknet-markets/silk-road/1/2013-vanhout.pdf";
+"~^/docs/japanese/1940-nippongakujutsushinkokai-manyoshu$" "/docs/japanese/1940-nippongakujutsushinkokai-manyoshu.pdf";
+"~^/docs/rmr-handotten.com/library/sex/anal-sex/index.html.*$" "/docs/rotten.com/library/sex/anal-sex/index.html";
+"~^/docs/statistics/decision/1983-howard-readingsondecisionanalysis-v3.pdf.*$" "/docs/statistics/decision/1983-howard-readingsondecisionanalysis-v2.pdf";
+"~^/newsletter/2020/-05.*$" "/newsletter/2020/05";
+"~^/docs/darknet-markets/blackmarket-reloaded/3D.*$" "/docs/darknet-markets/blackmarket-reloaded/index";
+"~^/docs/darknet-markets/2013-05-05-moore-bitcoinexchangesurvivalanalysis.r$" "/docs/darknet-markets/2013-05-05-moore-bitcoinexchangesurvivalanalysis.R";
+"~^/zeo/vitamin-d@vitamin-d-at-morn-helps.*$" "/zeo/Vitamin-D#vitamin-d-at-morn-helps";
+"~^/Unsee-ing.*$" "/Unseeing";
+"~^/static/img/spreadsheet.svg.*$" "/static/img/icons/spreadsheet.svg";
+"~^/static/font/IBMPlexMono-Regular.otf.*$" "/static/font/ibm-plex-mono/IBMPlexMono-Regular.otf";
+"~^/static/build/linkbacklink.o.*$" "/static/build/LinkBacklink.hs";
+"~^/DNM_survival.*$" "/DNM-survival";
+"~^/aos_process.php_files/surveyresults_graph_extremes_registration.png.*$" "/docs/personal/2011-gwern-yourmorals.org/aos_process.php_files/surveyresults_graph_extremes_registration.png";
+"~^/docs/darknet-markets/https:/forum.bitcoin.org/index.php?topic=29737.0.*$" "https:/forum.bitcoin.org/index.php?topic=29737.0";
+"~^/docs/darknet-markets/https:/journals.plos.org/plosone/article?id=10.1371/journal.pone.0238019.*$" "https:/journals.plos.org/plosone/article?id=10.1371/journal.pone.0238019";
+"~^/docs/modafinil/https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0227818.*$" "https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0227818";
+"~^/docs/psychology/1950-keats.pdf%5C.*$" "/docs/psychology/1950-keats.pdf";
+"~^/docs/psychology/2008-alper.pdf%5C.*$" "/docs/psychology/2008-alper.pdf";
+"~^/docs/psychology/Danbooru2019.*$" "/Danbooru2021#danbooru2021";
+"~^/docs/[a-km-z].*/1955-nash.*$" "/docs/cs/cryptography/1955-nash";
+"~^/docs/rotten.com/library/crime/Field_Interrogation/vent2.jpg.*$" "/docs/rotten.com/library/crime/field-interrogation/vent2.jpg";
+"~^/docs/vitamin-d/2014-autier.pdf%5C.*$" "/docs/vitamin-d/2014-autier.pdf";
+"~^/docs/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf%5C.*$" "/docs/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27160,6 +27184,36 @@
 "~^/quitonce.net.*$" "/static/404";
 "~^/my_alfa.*$" "/static/404";
 "~^/[abdgu]+_[abdgu]+\.html$" "/static/404";
+"~^/mirserver.*$" "/static/404";
+"~^/ldhub/.*$" "/static/404";
+"~^/KingServer.*$" "/static/404";
+"~^/if\(window.print.*$" "/static/404";
+"~^/gogogobookmarks.com%.*$" "/static/404";
+"~^/forum.reallusion.com.*$" "/static/404";
+"~^/docs/www/vanemden.wordpress.com/&quot.*$" "/static/404";
+"~^/docs/darknet-markets/user/.*$" "/static/404";
+"~^/trust.txt.*$" "/static/404";
+"~^/arama.*$" "/static/404";
+"~^/andrezoalu.tblogz.com.*$" "/static/404";
+"~^/w3dir.com%2Fen%2F.*$" "/static/404";
+"~^/safari-pinned-tab..*$" "/static/404";
+"~^/petrimazepa.com%.*$" "/static/404";
+"~^/media-control.biz%2F.*$" "/static/404";
+"~^/M285.476-272.971L91.132-.*$" "/static/404";
+"~^/docs/darknet-markets/node/.*$" "/static/404";
+"~^/dekaville.ro%2Fc.*$" "/static/404";
+"~^/collectors.txt.*$" "/static/404";
+"~^/cc7aa75c8a4d6d7240a3.svg.*$" "/static/404";
+"~^/bit.ly%2F3sl1ybS.*$" "/static/404";
+"~^/arbooks..*$" "/static/404";
+"~^/andreortk339.wordpress.*$" "/static/404";
+"~^/88dfdc6c6d90475445fe.*$" "/static/404";
+"~^/781c94c714269f2f4746.*$" "/static/404";
+"~^/%5Bsite.*$" "/static/404";
+"~^/454c518606f34a2aaf49.*$" "/static/404";
+"~^/3ebb48373ef8fc9d5bc1.*$" "/static/404";
+"~^/3.bp.blogspot.com.*$" "/static/404";
+"~^/1cf5ab54e8e6175cc001.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
