--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -1918,7 +1918,7 @@ default "";
 "~^/docs/sr/2020-childs.pdf.*$" "/docs/darknet-markets/2020-childs.pdf";
 "~^/docs/sr/2020-cork.pdf.*$" "/docs/darknet-markets/2020-cork.pdf";
 "~^/docs/sr/2020-flugsvamp-docs-FUP_B_13010-18.tar.xz.*$" "/docs/darknet-markets/2020-flugsvamp-docs-FUP_B_13010-18.tar.xz";
-"~^/docs/sr/2020-ganan.pdf.*$" "/docs/darknet-markets/2020-ganan.pdf";
+"~^/docs/sr/2020-ganan.pdf.*$" "/docs/darknet-markets/silk-road/1/2020-ganan.pdf";
 "~^/docs/sr/2020-harviainen.pdf.*$" "/docs/darknet-markets/2020-harviainen.pdf";
 "~^/docs/sr/2020-heistracher.pdf.*$" "/docs/darknet-markets/2020-heistracher.pdf";
 "~^/docs/sr/2020-hiramoto.pdf.*$" "/docs/darknet-markets/2020-hiramoto.pdf";
@@ -3743,4 +3743,142 @@ default "";
 "~^/docs/darknet-markets/2019-morelato.pdf.*$" "/docs/darknet-markets/alphabay/2019-morelato.pdf";
 "~^/docs/darknet-markets/2019-veringmeier.pdf.*$" "/docs/darknet-markets/alphabay/2019-veringmeier.pdf";
 "~^/docs/darknet-markets/2020-cork.pdf.*$" "/docs/darknet-markets/silk-road/1/2020-cork.pdf";
-"~^/docs/darknet-markets/2020-ganan.pdf.*$" "/2020-ganan.pdf";
+"~^/docs/darknet-markets/2020-ganan.pdf.*$" "/docs/darknet-markets/silk-road/1/2020-ganan.pdf";
+"~^/docs/genetics/selection/2010-kean.pdf.*$" "/docs/genetics/selection/apple/2010-kean.pdf";
+"~^/docs/genetics/cloning/2014-choi.pdf.*$" "/docs/genetics/cloning/dog/2014-choi.pdf";
+"~^/docs/genetics/heritable/1986-mackenzie.pdf.*$" "/docs/genetics/heritable/dog/1986-mackenzie.pdf";
+"~^/docs/genetics/heritable/2003-takeuchi.pdf.*$" "/docs/genetics/heritable/dog/2003-takeuchi.pdf";
+"~^/docs/genetics/heritable/2001-houpt.pdf.*$" "/docs/genetics/heritable/dog/2001-houpt.pdf";
+"~^/2020-ganan.pdf.*$" "/docs/darknet-markets/silk-road/1/2020-ganan.pdf";
+"~^/docs/darknet-markets/2016-caudevilla-2.pdf.*$" "/docs/darknet-markets/silk-road/1/2016-caudevilla-2.pdf";
+"~^/docs/darknet-markets/2016-damien.pdf.*$" "/docs/darknet-markets/evolution/2016-damien.pdf";
+"~^/docs/darknet-markets/2016-decaryhetu.pdf.*$" "/docs/darknet-markets/evolution/2016-decaryhetu.pdf";
+"~^/docs/darknet-markets/2016-munksgaard-2.pdf.*$" "/2016-munksgaard-2.pdf";
+"~^/docs/darknet-markets/2016-munksgaard.pdf.*$" "/docs/darknet-markets/silk-road/2/2016-munksgaard.pdf";
+"~^/docs/darknet-markets/2017-luo.pdf.*$" "/docs/darknet-markets/agora/2017-luo.pdf";
+"~^/docs/darknet-markets/2019-vana.pdf.*$" "/docs/darknet-markets/evolution/2019-vana.pdf";
+"~^/docs/darknet-markets/2020-hiramoto.pdf.*$" "/docs/darknet-markets/silk-road/1/2020-hiramoto.pdf";
+"~^/docs/darknet-markets/2020-tsuchiya.pdf.*$" "/docs/darknet-markets/agora/2020-tsuchiya.pdf";
+"~^/docs/darknet-markets/2021-anikevics.pdf.*$" "/docs/darknet-markets/agora/2021-anikevics.pdf";
+"~^/docs/cs/1983-brady.pdf.*$" "/docs/cs/cellular-automaton/1983-brady.pdf";
+"~^/docs/algernon/2014-rubeis.pdf.*$" "/docs/genetics/heritable/rare-variants/2014-rubeis.pdf";
+"~^/docs/genetics/heritable/2012-rauch.pdf.*$" "/docs/genetics/heritable/rare-variants/2012-rauch.pdf";
+"~^/docs/psychology/1969-earls.pdf.*$" "/docs/psychology/personality/1969-earls.pdf";
+"~^/2016-munksgaard-2.pdf.*$" "/docs/darknet-markets/silk-road/1/2016-munksgaard-2.pdf";
+"~^/docs/history/2019-chinatribunal.pdf.*$" "/docs/history/uighur/2019-chinatribunal.pdf";
+"~^/docs/history/2020-zenz.pdf.*$" "/docs/history/uighur/2020-zenz.pdf";
+"~^/docs/design/1926-bartels-theartofspacing.pdf.*$" "/docs/design/typography/1926-bartels-theartofspacing.pdf";
+"~^/docs/design/1954-chaundy-theprintingofmathematics.pdf.*$" "/docs/design/typography/1954-chaundy-theprintingofmathematics.pdf";
+"~^/docs/design/1980-knuth.pdf.*$" "/docs/design/typography/1980-knuth.pdf";
+"~^/docs/design/1982-knuth.pdf.*$" "/docs/design/typography/1982-knuth.pdf";
+"~^/docs/design/1986-koved.pdf.*$" "/docs/design/typography/1986-koved.pdf";
+"~^/docs/design/1988-wishart.pdf.*$" "/docs/design/typography/1988-wishart.pdf";
+"~^/docs/design/2000-thanh.pdf.*$" "/docs/design/typography/2000-thanh.pdf";
+"~^/docs/design/2003-matrix-typeandtypography.pdf.*$" "/docs/design/typography/2003-matrix-typeandtypography.pdf";
+"~^/docs/design/2007-rhatigan.pdf.*$" "/docs/design/typography/2007-rhatigan.pdf";
+"~^/docs/design/2010-p22-civilite-typespecimen.pdf.*$" "/docs/design/typography/2010-p22-civilite-typespecimen.pdf";
+"~^/docs/design/2021-yang.pdf.*$" "/docs/design/typography/2021-yang.pdf";
+"~^/docs/design/2020-jeremytankard-footnote-36-redisturbed.pdf.*$" "/docs/design/typography/2020-jeremytankard-footnote-36-redisturbed.pdf";
+"~^/docs/design/2005-wallace-redesign.pdf.*$" "/docs/design/typography/2005-wallace-redesign.pdf";
+"~^/docs/design/2018-10-09-heck-structuraltypography.html.*$" "/docs/design/typography/2018-10-09-heck-structuraltypography.html";
+"~^/docs/design/2017-walker.pdf.*$" "/docs/design/typography/2017-walker.pdf";
+"~^/docs/design/2017-schmutz.pdf.*$" "/docs/design/typography/2017-schmutz.pdf";
+"~^/docs/design/2016-schmutz.pdf.*$" "/docs/design/typography/2016-schmutz.pdf";
+"~^/docs/design/1981-knuth.pdf.*$" "/docs/design/typography/1981-knuth.pdf";
+"~^/docs/design/1988-raymond.pdf.*$" "/docs/design/typography/1988-raymond.pdf";
+"~^/docs/design/1988-vandam.pdf.*$" "/docs/design/typography/1988-vandam.pdf";
+"~^/docs/design/1990-tufte-envisioninginformation-ch5-byrneseuclid.pdf.*$" "/docs/design/typography/1990-tufte-envisioninginformation-ch5-byrneseuclid.pdf";
+"~^/docs/design/1988-alpha-atlasofobliquemaps.pdf.*$" "/docs/design/visualization/1988-alpha-atlasofobliquemaps.pdf";
+"~^/docs/design/1990-radeloff.pdf.*$" "/docs/design/visualization/1990-radeloff.pdf";
+"~^/docs/design/2007-haque.pdf.*$" "/docs/design/visualization/2007-haque.pdf";
+"~^/docs/design/2012-sung.pdf.*$" "/docs/design/visualization/2012-sung.pdf";
+"~^/docs/design/2014-bigelow.pdf.*$" "/docs/design/visualization/2014-bigelow.pdf";
+"~^/docs/design/2018-newman.pdf.*$" "/docs/design/visualization/2018-newman.pdf";
+"~^/docs/design/2019-searston.pdf.*$" "/docs/design/visualization/2019-searston.pdf";
+"~^/docs/design/2021-franconeri.pdf.*$" "/docs/design/visualization/2021-franconeri.pdf";
+"~^/docs/statistics/2019-panaretos.pdf.*$" "/docs/statistics/probability/2019-panaretos.pdf";
+"~^/docs/statistics/2019-mclachlan.pdf.*$" "/docs/statistics/probability/2019-mclachlan.pdf";
+"~^/docs/psychology/2012-herculanohouzel.pdf.*$" "/docs/psychology/neuroscience/2012-herculanohouzel.pdf";
+"~^/docs/statistics/2005-gorsuch.pdf.*$" "/docs/statistics/probability/2005-gorsuch.pdf";
+"~^/docs/statistics/2001-fienberg.pdf.*$" "/docs/statistics/decision/2001-fienberg.pdf";
+"~^/docs/statistics/1990-ocinneide.pdf.*$" "/docs/statistics/probability/1990-ocinneide.pdf";
+"~^/docs/statistics/1990-mallows.pdf.*$" "/docs/statistics/probability/1990-mallows.pdf";
+"~^/docs/longevity/2021-lecouteur.pdf.*$" "/docs/longevity/epigenetics/2021-lecouteur.pdf";
+"~^/docs/longevity/2022-creevy.pdf.*$" "/2022-creevy.pdf";
+"~^/docs/longevity/2021-trapp.pdf.*$" "/docs/longevity/epigenetics/2021-trapp.pdf";
+"~^/2022-creevy.pdf.*$" "/docs/longevity/epigenetics/2022-creevy.pdf";
+"~^/docs/longevity/2020-raj.pdf.*$" "/docs/longevity/epigenetics/2020-raj.pdf";
+"~^/docs/longevity/2019-fahy.pdf.*$" "/docs/longevity/epigenetics/2019-fahy.pdf";
+"~^/docs/darknet-markets/2014-12-22-pacer-willyclock.maff.*$" "/docs/darknet-markets/agora/2014-12-22-pacer-willyclock.maff";
+"~^/docs/darknet-markets/2015-04-02-fbi-fourchargedinugandacounterfeitingscheme.html.*$" "/docs/darknet-markets/agora/2015-04-02-fbi-fourchargedinugandacounterfeitingscheme.html";
+"~^/docs/darknet-markets/2015-12-07-fbi-uscitizendeportedfromuganda.html.*$" "/docs/darknet-markets/agora/2015-12-07-fbi-uscitizendeportedfromuganda.html";
+"~^/docs/darknet-markets/2015-frembling-caed-03307884002.pdf.*$" "/docs/darknet-markets/agora/2015-frembling-caed-03307884002.pdf";
+"~^/docs/darknet-markets/2016-02-09-deepdotweb-horticulturalstudentinperth.html.*$" "/docs/darknet-markets/agora/2016-02-09-deepdotweb-horticulturalstudentinperth.html";
+"~^/docs/darknet-markets/2016-06-07-ryan-indictment-gov.uscourts.ksd.106175.1.0.pdf.*$" "/docs/darknet-markets/agora/2016-06-07-ryan-indictment-gov.uscourts.ksd.106175.1.0.pdf";
+"~^/docs/darknet-markets/2016-06-07-ryan-pacerdocket.mht.*$" "/docs/darknet-markets/agora/2016-06-07-ryan-pacerdocket.mht";
+"~^/docs/darknet-markets/2016-06-07-ryan-parolecomplaint.pdf.*$" "/docs/darknet-markets/agora/2016-06-07-ryan-parolecomplaint.pdf";
+"~^/docs/darknet-markets/agora/2014-12-17-agora-willyclock-complaint.pdf.*$" "/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff.*$" "/2015-02-22-agora-fremblingdocket.maff";
+"~^/docs/darknet-markets/agora/agora-focia-almd-01702438594.pdf.*$" "/agora-focia-almd-01702438594.pdf";
+"~^/docs/darknet-markets/agora/agora-moreira-mad-09506722843.pdf.*$" "/agora-moreira-mad-09506722843.pdf";
+"~^/docs/darknet-markets/2016-07-26-icyeagle-indictment-gov.uscourts.gand.228648.15.0.pdf.*$" "/docs/darknet-markets/alphabay/2016-07-26-icyeagle-indictment-gov.uscourts.gand.228648.15.0.pdf";
+"~^/docs/darknet-markets/exhibit8-le_counterintel.txt.*$" "/docs/darknet-markets/silk-road/1/exhibit8-le_counterintel.txt";
+"~^/docs/darknet-markets/2016-05-24-pacer-darkexpresso.mht.*$" "/docs/darknet-markets/evolution/2016-05-24-pacer-darkexpresso.mht";
+"~^/docs/darknet-markets/darkexpress-indictment-flmd-047016068221.pdf.*$" "/docs/darknet-markets/evolution/darkexpress-indictment-flmd-047016068221.pdf";
+"~^/docs/darknet-markets/hubbard-ord-15105281613.pdf.*$" "/docs/darknet-markets/evolution/hubbard-ord-15105281613.pdf";
+"~^/docs/darknet-markets/2014-06-25-xanaxking-antibailletter-cand035011914356.pdf.*$" "/docs/darknet-markets/silk-road/2/2014-06-25-xanaxking-antibailletter-cand035011914356.pdf";
+"~^/docs/darknet-markets/2014-11-20-blackmarkets-schell.maff.*$" "/docs/darknet-markets/silk-road/2/2014-11-20-blackmarkets-schell.maff";
+"~^/docs/darknet-markets/2014-11-20-californiacanbis.pdf.*$" "/docs/darknet-markets/silk-road/2/2014-11-20-californiacanbis.pdf";
+"~^/docs/darknet-markets/2015-01-07-kingcountysuperiorcourt-brianfarrell-searchwarrantaffidavit.pdf.*$" "/docs/darknet-markets/silk-road/2/2015-01-07-kingcountysuperiorcourt-brianfarrell-searchwarrantaffidavit.pdf";
+"~^/docs/darknet-markets/brianfarrell-federalcomplaint.pdf.*$" "/docs/darknet-markets/silk-road/2/brianfarrell-federalcomplaint.pdf";
+"~^/docs/darknet-markets/2013-04-16-dmt.mht.*$" "/docs/darknet-markets/silk-road/1/2013-04-16-dmt.mht";
+"~^/docs/darknet-markets/2013-04-17-australia.mht.*$" "/docs/darknet-markets/silk-road/1/2013-04-17-australia.mht";
+"~^/docs/darknet-markets/2013-06-07-digitalink-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-digitalink-profile.html";
+"~^/docs/darknet-markets/2013-06-07-edgarnumbers-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-edgarnumbers-profile.html";
+"~^/docs/darknet-markets/2013-06-07-mdpro-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-mdpro-profile.html";
+"~^/docs/darknet-markets/2013-06-truckingcaseyjones.html.maff.*$" "/docs/darknet-markets/silk-road/1/2013-06-truckingcaseyjones.html.maff";
+"~^/docs/darknet-markets/2013-07-09-germany.mht.*$" "/docs/darknet-markets/silk-road/1/2013-07-09-germany.mht";
+"~^/docs/darknet-markets/2013-07-23-sourdieselman-gillum-complaint.pdf.*$" "/docs/darknet-markets/silk-road/1/2013-07-23-sourdieselman-gillum-complaint.pdf";
+"~^/docs/darknet-markets/2013-08-20-hughescourtrecords.html.maff.*$" "/docs/darknet-markets/silk-road/1/2013-08-20-hughescourtrecords.html.maff";
+"~^/docs/darknet-markets/2013-10-03-plutopete.mht.*$" "/docs/darknet-markets/silk-road/1/2013-10-03-plutopete.mht";
+"~^/docs/darknet-markets/2013-10-26-sourdieselmanreviews.mht.*$" "/docs/darknet-markets/silk-road/1/2013-10-26-sourdieselmanreviews.mht";
+"~^/docs/darknet-markets/2013-10-26-wisconsinmdma.maff.*$" "/docs/darknet-markets/silk-road/1/2013-10-26-wisconsinmdma.maff";
+"~^/docs/darknet-markets/2013-11-05-sourdieselman-chan-documents.zip.*$" "/docs/darknet-markets/silk-road/1/2013-11-05-sourdieselman-chan-documents.zip";
+"~^/docs/darknet-markets/2013-11-05-sourdieselman-courtrecords.maff.*$" "/docs/darknet-markets/silk-road/1/2013-11-05-sourdieselman-courtrecords.maff";
+"~^/docs/darknet-markets/2013-11-05-sourdieselman-gillum-documents.zip.*$" "/docs/darknet-markets/silk-road/1/2013-11-05-sourdieselman-gillum-documents.zip";
+"~^/docs/darknet-markets/2013-11-11-mdpro-pacer.maff.*$" "/docs/darknet-markets/silk-road/1/2013-11-11-mdpro-pacer.maff";
+"~^/docs/darknet-markets/2013-11-11-moveitnicebust.mht.*$" "/docs/darknet-markets/silk-road/1/2013-11-11-moveitnicebust.mht";
+"~^/docs/darknet-markets/2013-11-22-mdpro-6-13-mj-01614-DAB.zip.*$" "/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-6-13-mj-01614-DAB.zip";
+"~^/docs/darknet-markets/2013-11-22-mdpro-forumposts.maff.*$" "/docs/darknet-markets/silk-road/1/2013-11-22-mdpro-forumposts.maff";
+"~^/docs/darknet-markets/2013-11-29-mdpro-moonbear.mht.*$" "/docs/darknet-markets/silk-road/1/2013-11-29-mdpro-moonbear.mht";
+"~^/docs/darknet-markets/2013-12-10-hammertime-indictment.pdf.*$" "/docs/darknet-markets/silk-road/1/2013-12-10-hammertime-indictment.pdf";
+"~^/docs/darknet-markets/2013-12-19-hammertime-pacer.maff.*$" "/docs/darknet-markets/silk-road/1/2013-12-19-hammertime-pacer.maff";
+"~^/docs/darknet-markets/2014-07-29-pacer-caligirl.maff.*$" "/docs/darknet-markets/silk-road/1/2014-07-29-pacer-caligirl.maff";
+"~^/docs/darknet-markets/2014-lawin-sentencing-iand07501568757.pdf.*$" "/docs/darknet-markets/silk-road/1/2014-lawin-sentencing-iand07501568757.pdf";
+"~^/docs/darknet-markets/2015-02-17-hammertime-pleadeal.pdf.*$" "/docs/darknet-markets/silk-road/1/2015-02-17-hammertime-pleadeal.pdf";
+"~^/docs/darknet-markets/2015-07-22-fbileaderofcouponcounterfeitingring.html.*$" "/docs/darknet-markets/silk-road/1/2015-07-22-fbileaderofcouponcounterfeitingring.html";
+"~^/docs/darknet-markets/2015-08-10-deepdotweb-thestoryofanunluckyitaliancyberpusher.html.*$" "/docs/darknet-markets/silk-road/1/2015-08-10-deepdotweb-thestoryofanunluckyitaliancyberpusher.html";
+"~^/docs/darknet-markets/2015-09-05-deepdotweb-darknetvendorsentencedto8years.html.*$" "/docs/darknet-markets/silk-road/1/2015-09-05-deepdotweb-darknetvendorsentencedto8years.html";
+"~^/docs/darknet-markets/2016-01-12-case151815cr-document34.pdf.*$" "/docs/darknet-markets/silk-road/1/2016-01-12-case151815cr-document34.pdf";
+"~^/docs/darknet-markets/2016-naturalweed-buyerfine.pdf.*$" "/docs/darknet-markets/silk-road/1/2016-naturalweed-buyerfine.pdf";
+"~^/docs/darknet-markets/2017-04-07-deepdotweb-afterhoursentenced.html.*$" "/docs/darknet-markets/silk-road/1/2017-04-07-deepdotweb-afterhoursentenced.html";
+"~^/docs/darknet-markets/anonymous-policewriteup-speedsweden.maff.*$" "/docs/darknet-markets/silk-road/1/anonymous-policewriteup-speedsweden.maff";
+"~^/docs/darknet-markets/btcking-profile-1.htm.*$" "/docs/darknet-markets/silk-road/1/btcking-profile-1.htm";
+"~^/docs/darknet-markets/btcking-profile-2.htm.*$" "/docs/darknet-markets/silk-road/1/btcking-profile-2.htm";
+"~^/docs/darknet-markets/caligirl-profile.htm.*$" "/docs/darknet-markets/silk-road/1/caligirl-profile.htm";
+"~^/docs/darknet-markets/digitalink-courtrecords.maff.*$" "/docs/darknet-markets/silk-road/1/digitalink-courtrecords.maff";
+"~^/docs/darknet-markets/digitalink-federalcomplaint-1-13-cr-00593-ccb.pdf.*$" "/docs/darknet-markets/silk-road/1/digitalink-federalcomplaint-1-13-cr-00593-ccb.pdf";
+"~^/docs/darknet-markets/digitalink-forumdiscussions.maff.*$" "/docs/darknet-markets/silk-road/1/digitalink-forumdiscussions.maff";
+"~^/docs/darknet-markets/digitalink-profile.maff.*$" "/docs/darknet-markets/silk-road/1/digitalink-profile.maff";
+"~^/docs/darknet-markets/digitalink-thoth.maff.*$" "/docs/darknet-markets/silk-road/1/digitalink-thoth.maff";
+"~^/docs/darknet-markets/hammertime-profile.htm.*$" "/docs/darknet-markets/silk-road/1/hammertime-profile.htm";
+"~^/docs/darknet-markets/lamoustache-walkaboot-video.zip.*$" "/docs/darknet-markets/silk-road/1/lamoustache-walkaboot-video.zip";
+"~^/docs/darknet-markets/2013-11-03-sheepmarketplace-doxxing.maff.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-03-sheepmarketplace-doxxing.maff";
+"~^/docs/darknet-markets/sheep-20121203-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html.*$" "/docs/darknet-markets/sheep-marketplace/20121203-profile-livefromsweden-05abde47fcf35cd033ff12b9254bf3a0.html";
+"~^/2014-12-17-agora-willyclock-complaint.pdf.*$" "/docs/darknet-markets/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/agora-moreira-mad-09506722843.pdf.*$" "/docs/darknet-markets/agora/agora-moreira-mad-09506722843.pdf";
+"~^/agora-focia-almd-01702438594.pdf.*$" "/docs/darknet-markets/agora/agora-focia-almd-01702438594.pdf";
+"~^/2015-02-22-agora-fremblingdocket.maff.*$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/docs/psychiatry/2021-britton.pdf.*$" "/docs/psychiatry/meditation/2021-britton.pdf";
+"~^/docs/economics/2020-zheng.pdf.*$" "/docs/economics/copyright/2020-zheng.pdf";
+"~^/docs/nootropic/2018-hanley.pdf.*$" "/docs/nootropic/quantified-self/2018-hanley.pdf";
