--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23001,6 +23001,15 @@
 "~^/docs/rotten.com/library/crime/Field_Interrogation/vent2.jpg.*$" "/docs/rotten.com/library/crime/field-interrogation/vent2.jpg";
 "~^/docs/vitamin-d/2014-autier.pdf%5C.*$" "/docs/vitamin-d/2014-autier.pdf";
 "~^/docs/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf%5C.*$" "/docs/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf";
+"~^/Slowing-Moores-Ldsr.*$" "/Slowing-Moores-Law";
+"~^/FACE.*$" "/Faces";
+"~^/docs/darknet-markets/evolution/3D.*$" "/docs/darknet-markets/evolution/index";
+"~^/docs/darknet-markets/agora/3D.*$" "/docs/darknet-markets/agora/index";
+"~^/docs/ig/2002-templer.pdf.*$" "/docs/iq/2002-templer.pdf";
+"~^/compement.*$" "/Complement";
+"~^/docs/www/edwardtufte.github.io/tufte.css$" "https://edwardtufte.github.io/tufte-css/tufte.css";
+"~^/docs/longevity/senolytic/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/docs/www/aiweirdness.com/out-4.5.41.js.*$" "https://www.aiweirdness.com/";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
