--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3211,11 +3211,11 @@ default "";
 "~^/docs/ai/2017-shen.pdf.*$" "/docs/ai/scaling/2017-shen.pdf";
 "~^/docs/ai/2018-sharma.pdf.*$" "/docs/ai/diffusion/2018-sharma.pdf";
 "~^/docs/ai/2019-02-18-lecun-isscc-talk-deeplearninghardwarepastpresentandfuture.pdf.*$" "/docs/ai/scaling/2019-02-18-lecun-isscc-talk-deeplearninghardwarepastpresentandfuture.pdf";
-"~^/docs/ai/2019-abdal.pdf.*$" "/docs/ai/stylegan/2019-abdal.pdf";
+"~^/docs/ai/2019-abdal.pdf.*$" "/docs/ai/gan/stylegan/2019-abdal.pdf";
 "~^/docs/ai/2019-bashivan.pdf.*$" "/docs/ai/adversarial/2019-bashivan.pdf";
 "~^/docs/ai/2019-dai.pdf.*$" "/docs/ai/anime/2019-dai.pdf";
 "~^/docs/ai/2019-gervais.pdf.*$" "/docs/ai/poetry/2019-gervais.pdf";
-"~^/docs/ai/2020-05-05-tjukanov-mapdreameraicartography.html.*$" "/docs/ai/stylegan/2020-05-05-tjukanov-mapdreameraicartography.html";
+"~^/docs/ai/2020-05-05-tjukanov-mapdreameraicartography.html.*$" "/docs/ai/gan/stylegan/2020-05-05-tjukanov-mapdreameraicartography.html";
 "~^/docs/ai/2020-bell.pdf.*$" "/docs/ai/scaling/2020-bell.pdf";
 "~^/docs/ai/2020-chen.pdf.*$" "/docs/ai/gpt/dall-e/2020-chen.pdf";
 "~^/docs/ai/2020-hasson.pdf.*$" "/docs/ai/scaling/2020-hasson.pdf";
@@ -3882,3 +3882,6 @@ default "";
 "~^/docs/psychiatry/2021-britton.pdf.*$" "/docs/psychiatry/meditation/2021-britton.pdf";
 "~^/docs/economics/2020-zheng.pdf.*$" "/docs/economics/copyright/2020-zheng.pdf";
 "~^/docs/nootropic/2018-hanley.pdf.*$" "/docs/nootropic/quantified-self/2018-hanley.pdf";
+"~^/docs/ai/gan/2022-zhou.pdf.*$" "/docs/ai/gan/stylegan/2022-zhou.pdf";
+"~^/docs/ai/1995-williams.pdf.*$" "/docs/ai/rnn/1995-williams.pdf";
+"~^/images/gan/2019-02-15-ffhqonly-interpolation-4x4.mp4.*$" "/images/gan/stylegan/2019-02-15-ffhqonly-interpolation-4x4.mp4";
