--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23010,6 +23010,9 @@
 "~^/docs/www/edwardtufte.github.io/tufte.css$" "https://edwardtufte.github.io/tufte-css/tufte.css";
 "~^/docs/longevity/senolytic/favicon.ico.*$" "/static/img/favicon.ico";
 "~^/docs/www/aiweirdness.com/out-4.5.41.js.*$" "https://www.aiweirdness.com/";
+"~^/nootropic$" "/Nootropics";
+"~^http://www.rfa.org/english/.*$" "https://www.rfa.org/english/";
+"~^/docs/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html-.*$" "/docs/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27223,6 +27226,22 @@
 "~^/3ebb48373ef8fc9d5bc1.*$" "/static/404";
 "~^/3.bp.blogspot.com.*$" "/static/404";
 "~^/1cf5ab54e8e6175cc001.*$" "/static/404";
+"~^/heapdump.*$" "/static/404";
+"~^/.esmtp.*$" "/static/404";
+"~^/Docker.*$" "/static/404";
+"~^/+CSCOT.*$" "/static/404";
+"~^/credentials/.*$" "/static/404";
+"~^/configprop.*$" "/static/404";
+"~^/%c0.*$" "/static/404";
+"~^/beans.*$" "/static/404";
+"~^/autoconfig.*$" "/static/404";
+"~^/access.log.*$" "/static/404";
+"~^/isoux.org.*$" "/static/404";
+"~^/web.archive.org%2Fweb%2F2%2Fhttps%3A%2F%2Fwww.lifestyleandmindsetassist.com.*$" "/static/404";
+"~^/threaddump.*$" "/static/404";
+"~^/t9m.ru.*$" "/static/404";
+"~^/_/.ssh/.*$" "/static/404";
+"~^/src/.*config\.js.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
