--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3885,3 +3885,37 @@ default "";
 "~^/docs/ai/gan/2022-zhou.pdf.*$" "/docs/ai/gan/stylegan/2022-zhou.pdf";
 "~^/docs/ai/1995-williams.pdf.*$" "/docs/ai/rnn/1995-williams.pdf";
 "~^/images/gan/2019-02-15-ffhqonly-interpolation-4x4.mp4.*$" "/images/gan/stylegan/2019-02-15-ffhqonly-interpolation-4x4.mp4";
+"~^/docs/ai/1999-provost.pdf.*$" "/docs/ai/tabular/1999-provost.pdf";
+"~^/docs/ai/1997-oates.pdf.*$" "/docs/ai/tabular/1997-oates.pdf";
+"~^/docs/ai/1996-kohavi.pdf.*$" "/docs/ai/tabular/1996-kohavi.pdf";
+"~^/docs/reinforcement-learning/1991-gardner-ch8amatchboxgamelearningmachine.pdf.*$" "/docs/reinforcement-learning/model-free/1991-gardner-ch8amatchboxgamelearningmachine.pdf";
+"~^/docs/reinforcement-learning/2017-momennejad.pdf.*$" "/docs/reinforcement-learning/model-free/2017-momennejad.pdf";
+"~^/docs/reinforcement-learning/2019-bishop.pdf.*$" "/docs/reinforcement-learning/model-free/2019-bishop.pdf";
+"~^/docs/reinforcement-learning/2020-kim.pdf.*$" "/docs/reinforcement-learning/model-free/2020-kim.pdf";
+"~^/docs/reinforcement-learning/2020-bellemare.pdf.*$" "/docs/reinforcement-learning/model-free/2020-bellemare.pdf";
+"~^/docs/reinforcement-learning/2020-cross.pdf.*$" "/docs/reinforcement-learning/model-free/2020-cross.pdf";
+"~^/docs/reinforcement-learning/2002-schmidhuber.pdf.*$" "/docs/reinforcement-learning/model/2002-schmidhuber.pdf";
+"~^/docs/reinforcement-learning/1963-michie.pdf.*$" "/docs/reinforcement-learning/model-free/1963-michie.pdf";
+"~^/docs/reinforcement-learning/1982-michie.pdf.*$" "/docs/reinforcement-learning/model-free/1982-michie.pdf";
+"~^/docs/reinforcement-learning/1992-williams.pdf.*$" "/docs/reinforcement-learning/model-free/1992-williams.pdf";
+"~^/docs/psychology/personality/2008-steel.pdf.*$" "/docs/psychology/personality/conscientiousness/2008-steel.pdf";
+"~^/docs/psychology/personality/2018-nave.pdf.*$" "/docs/psychology/personality/conscientiousness/2018-nave.pdf";
+"~^/docs/psychology/personality/2022-durkee.pdf.*$" "/docs/psychology/personality/conscientiousness/2022-durkee.pdf";
+"~^/docs/reinforcement-learning/2016-graves.pdf.*$" "/docs/reinforcement-learning/model-free/2016-graves.pdf";
+"~^/docs/reinforcement-learning/2016-johnson.pdf.*$" "/docs/reinforcement-learning/model-free/2016-johnson.pdf";
+"~^/docs/reinforcement-learning/2017-arulkumaran.pdf.*$" "/docs/reinforcement-learning/model-free/2017-arulkumaran.pdf";
+"~^/docs/reinforcement-learning/2017-stachenfeld.pdf.*$" "/docs/reinforcement-learning/model/2017-stachenfeld.pdf";
+"~^/docs/reinforcement-learning/2018-eslami.pdf.*$" "/docs/reinforcement-learning/model/2018-eslami.pdf";
+"~^/docs/reinforcement-learning/2018-everitt.pdf.*$" "/docs/reinforcement-learning/model/2018-everitt.pdf";
+"~^/docs/reinforcement-learning/2018-gromski.pdf.*$" "/docs/reinforcement-learning/model/2018-gromski.pdf";
+"~^/docs/reinforcement-learning/2018-segler.pdf.*$" "/docs/reinforcement-learning/model/2018-segler.pdf";
+"~^/docs/reinforcement-learning/2018-wu.pdf.*$" "/docs/reinforcement-learning/model/2018-wu.pdf";
+"~^/docs/reinforcement-learning/2019-neftci.pdf.*$" "/docs/reinforcement-learning/model-free/2019-neftci.pdf";
+"~^/docs/reinforcement-learning/2019-stanley.pdf.*$" "/docs/reinforcement-learning/model-free/2019-stanley.pdf";
+"~^/docs/reinforcement-learning/2019-zhavoronkov.pdf.*$" "/docs/reinforcement-learning/model-free/2019-zhavoronkov.pdf";
+"~^/docs/reinforcement-learning/2020-dabney.pdf.*$" "/docs/reinforcement-learning/model-free/2020-dabney.pdf";
+"~^/docs/reinforcement-learning/2020-maes.pdf.*$" "/docs/reinforcement-learning/model-free/2020-maes.pdf";
+"~^/docs/reinforcement-learning/2021-mirhoseini.pdf.*$" "/docs/reinforcement-learning/model/2021-mirhoseini.pdf";
+"~^/docs/reinforcement-learning/2021-scanlon.pdf.*$" "/docs/reinforcement-learning/model/2021-scanlon.pdf";
+"~^/docs/psychology/personality/2020-anderson.pdf.*$" "/docs/psychology/personality/conscientiousness/2020-anderson.pdf";
+"~^/docs/iq/2019-allegrini.pdf.*$" "https://www.biorxiv.org/content/10.1101/418210v1.full";
