LM: tags: sort tags for easier grepping

--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3919,3 +3919,5 @@ default "";
 "~^/docs/reinforcement-learning/2021-scanlon.pdf.*$" "/docs/reinforcement-learning/model/2021-scanlon.pdf";
 "~^/docs/psychology/personality/2020-anderson.pdf.*$" "/docs/psychology/personality/conscientiousness/2020-anderson.pdf";
 "~^/docs/iq/2019-allegrini.pdf.*$" "https://www.biorxiv.org/content/10.1101/418210v1.full";
+"~^/docs/ai/scaling/2018-sandberg.pdf.*$" "/docs/ai/scaling/hardware/2018-sandberg.pdf";
+"~^/docs/ai/2018-fu.pdf.*$" "/docs/ai/nn/2018-fu.pdf";
