--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -1440,6 +1440,17 @@ default "";
 "~^/zeo/zma\.page.*$" "/zeo/ZMA.page";
 "~^/Bakewell.*$" "/reviews/Bakewell";
 "~^/docs/iq/smpy/1978-stanley-educationalprogramsandintellectualprodigies-tableofcontents.pdf.*$" "/docs/iq/smpy/1978-stanley-educationalprogramsandintellectualprodigies.pdf#page=4";
+"~^/docs/rotten.com/library/sex/rape/$" "/docs/rotten.com/library/sex/rape/index.html";
+"~^/Bitcoin-is-worse-is-better.*$" "/Bitcoin-is-Worse-is-Better";
+"~^/docs/ai/2019-topol.pdf.*$" "/docs/ai/nn/2019-topol.pdf";
+"~^/docs/ai/2020-avram.pdf.*$" "/docs/ai/nn/2020-avram.pdf";
+"~^/docs/ai/poetry/2019-05-24$" "/docs/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/docs/eva/2004-okada$" "/docs/eva/little-boy/2004-okada";
+"~^/docs/eva/2005-murakami$" "/docs/eva/little-boy/2005-murakami";
+"~^/docs/reinforcement-learning/2021-mirhoseini.pdf.*$" "/docs/reinforcement-learning/model/2021-mirhoseini.pdf";
+"~^/self-experimentation$" "/docs/nootropics/quantified-self/index";
+"~^/docs/psychology/1991-brown-humanuniversals.pdfByung.*$" "/docs/psychology/1991-brown-humanuniversals.pdf";
+"~^/docs/ai/2018-davies.pdf.*$" "/docs/ai/scaling/hardware/2018-davies.pdf";
 
 # Begin automated renamings (initiated to clean up & make directory names useful for link-tagging):
 "~^/docs/longnow/form990-longnowfoundation-2001-12.pdf.*$" "/docs/long-now/form990-longnowfoundation-2001-12.pdf";
@@ -3921,3 +3932,38 @@ default "";
 "~^/docs/iq/2019-allegrini.pdf.*$" "https://www.biorxiv.org/content/10.1101/418210v1.full";
 "~^/docs/ai/scaling/2018-sandberg.pdf.*$" "/docs/ai/scaling/hardware/2018-sandberg.pdf";
 "~^/docs/ai/2018-fu.pdf.*$" "/docs/ai/nn/2018-fu.pdf";
+"~^/docs/ai/1986-jordan.pdf.*$" "/docs/ai/rnn/1986-jordan.pdf";
+"~^/docs/ai/1986-rumelhart-2.pdf.*$" "/docs/ai/nn/1986-rumelhart-2.pdf";
+"~^/docs/ai/1988-finkbeiner.pdf.*$" "/docs/ai/nn/1988-finkbeiner.pdf";
+"~^/docs/ai/2018-choi.pdf.*$" "/docs/ai/nn/2018-choi.pdf";
+"~^/docs/ai/2018-davies.pdf.*$" "/docs/ai/scaling/hardware/2018-davies.pdf";
+"~^/docs/ai/2018-defauw.pdf.*$" "/docs/ai/nn/2018-defauw.pdf";
+"~^/docs/ai/2018-poplin.pdf.*$" "/docs/ai/nn/2018-poplin.pdf";
+"~^/docs/ai/2019-brynjolfsson.pdf.*$" "/docs/ai/nn/2019-brynjolfsson.pdf";
+"~^/docs/ai/2019-kleinfeld.pdf.*$" "/docs/ai/nn/2019-kleinfeld.pdf";
+"~^/docs/ai/2019-liang.pdf.*$" "/docs/ai/nn/2019-liang.pdf";
+"~^/docs/ai/2019-richards.pdf.*$" "/docs/ai/nn/2019-richards.pdf";
+"~^/docs/ai/2019-sinz.pdf.*$" "/docs/ai/nn/2019-sinz.pdf";
+"~^/docs/ai/2019-stiefel.pdf.*$" "/docs/ai/nn/2019-stiefel.pdf";
+"~^/docs/ai/2019-topol.pdf.*$" "/docs/ai/nn/2019-topol.pdf";
+"~^/docs/ai/2020-avram.pdf.*$" "/docs/ai/nn/2020-avram.pdf";
+"~^/docs/ai/2020-bao.pdf.*$" "/docs/ai/fully-connected/2020-bao.pdf";
+"~^/docs/ai/2020-barshai.pdf.*$" "/docs/ai/nn/2020-barshai.pdf";
+"~^/docs/ai/2020-cowen.pdf.*$" "/docs/ai/nn/2020-cowen.pdf";
+"~^/docs/ai/2020-launay-2.pdf.*$" "/docs/ai/scaling/hardware/2020-launay-2.pdf";
+"~^/docs/ai/2020-leipheimer.pdf.*$" "/docs/ai/nn/2020-leipheimer.pdf";
+"~^/docs/ai/2020-lillicrap.pdf.*$" "/docs/ai/nn/2020-lillicrap.pdf";
+"~^/docs/ai/2020-makin.pdf.*$" "/docs/ai/nn/2020-makin.pdf";
+"~^/docs/ai/2020-mennel.pdf.*$" "/docs/ai/scaling/hardware/2020-mennel.pdf";
+"~^/docs/ai/2020-thompson.pdf.*$" "/docs/ai/nn/2020-thompson.pdf";
+"~^/docs/ai/2021-gangadharbatla.pdf.*$" "/docs/ai/gan/2021-gangadharbatla.pdf";
+"~^/docs/ai/2021-hassan.pdf.*$" "/docs/ai/gan/2021-hassan.pdf";
+"~^/docs/ai/2021-kirkpatrick.pdf.*$" "/docs/ai/nn/2021-kirkpatrick.pdf";
+"~^/docs/ai/2021-moses.pdf.*$" "/docs/ai/nn/2021-moses.pdf";
+"~^/docs/ai/2021-norrie.pdf.*$" "/docs/ai/scaling/hardware/2021-norrie.pdf";
+"~^/docs/ai/2021-perdew.pdf.*$" "/docs/ai/nn/2021-perdew.pdf";
+"~^/docs/ai/2021-power.pdf.*$" "/docs/ai/fully-connected/2021-power.pdf";
+"~^/docs/ai/2021-santospata.pdf.*$" "/docs/ai/nn/2021-santospata.pdf";
+"~^/docs/ai/2006-friston.pdf.*$" "/docs/ai/nn/2006-friston.pdf";
+"~^/docs/ai/1990-opper.pdf.*$" "/docs/ai/nn/1990-opper.pdf";
+"~^/docs/ai/1986-rumelhart.pdf.*$" "/docs/ai/nn/1986-rumelhart.pdf";
