--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -657,6 +657,11 @@ server {
         rewrite ^(?<original>.*)\?service=.*$ /$original permanent;
         rewrite ^(?<original>.*)\?relatedposts_hit=.*$ /$original permanent;
         rewrite ^/docs/silk-road/(?<old>.*)$ /docs/darknet-markets/$old permanent;
+        rewrite ^/docs/ai/stylegan/(?<old>.*)$ /docs/ai/gan/stylegan/$old permanent;
+        rewrite ^/docs/ai/rnn/(?<old>.*)$ /docs/ai/nn/rnn/$old permanent;
+        rewrite ^/docs/ai/fully-connected/(?<old>.*)$ /docs/ai/nn/fully-connected/$old permanent;
+        rewrite ^/docs/conscientiousness/(?<old>.*)$ /docs/psychology/personality/conscientiousness/$old permanent;
+        rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
